--- a/transition-activity/main.css
+++ b/transition-activity/main.css
@@ -20,6 +20,8 @@ button {
   margin: .2em;
   font-family: 'Josefin Sans', sans-serif;
   font-size: 1.5em;
+  background-color: ghostwhite;
+  transition: .5s;
 }
 
 button:hover {
